5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1649_2704.log
== SUBMITION (2019-04-04 20:43:54) 
-- CODE:
x=float(input("Digite a nota do aluno de 0 a 10: "))
y=input("Aluno vai receber bonificacao? S/N ")
if(y.upper()==S)
   x=x*1.1
print(x)	
-- EXECUTION TIME:
0.163559
-- ERROR:
  File "/home/codebench/codes/1649/2704/main.py", line 3
    if(y.upper()==S)
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:44:10) 
-- CODE:
x=float(input("Digite a nota do aluno de 0 a 10: "))
y=input("Aluno vai receber bonificacao? S/N ")
if(y.upper()==S)
   x=x*1.1
print(x)	
-- ERROR:
File "XXXX", line 3
    if(y.upper()==S)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:44:20) 
-- CODE:
x=float(input("Digite a nota do aluno de 0 a 10: "))
y=input("Aluno vai receber bonificacao? S/N ")
if(y.upper()==S):
   x=x*1.1
print(x)	
-- EXECUTION TIME:
0.110326
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/2704/main.py", line 3, in <module>
    if(y.upper()==S):
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:44:23) 
-- CODE:
x=float(input("Digite a nota do aluno de 0 a 10: "))
y=input("Aluno vai receber bonificacao? S/N ")
if(y.upper()==S):
   x=x*1.1
print(x)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(y.upper()==S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:44:45) 
-- CODE:
x=float(input("Digite a nota do aluno de 0 a 10: "))
y=input("Aluno vai receber bonificacao? S/N ")
if(y.upper()=="S"):
   x=x*1.1
print(x)	
-- EXECUTION TIME:
0.17994
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 13:15:47) 
-- CODE:
x=float(input("Digite a nota do aluno de 0 a 10: "))
y=input("Aluno vai receber bonificacao? S/N ")
if(y.upper()=="S"):
   x=x*1.1
print(x)	
-- EXECUTION TIME:
0.155632
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
